DONE: Renamed laravel project, fixed overflow/margin errors

--- a/fullfort_crousty/public/frontend/css/style.css
+++ b/fullfort_crousty/public/frontend/css/style.css
@@ -256,7 +256,7 @@ a:focus {
 }
 
 .slider_section .img-box img {
-  width: 275px;
+  width: 100%;
   border-radius: 50px;
 }
 
